fixed weird bottom status spacing issues, widget size inconsistencies, and submit button in ie6

--- a/public/stylesheets/widget/sass/screen.sass
+++ b/public/stylesheets/widget/sass/screen.sass
@@ -524,6 +524,7 @@ table.tablesorter
     background-color: #B1B1B1
 
 .cd_submit_button
+  width: 40px
   padding: 5px 10px 5px 10px
   background: #01bb00       /* har*/
   cursor: pointer
@@ -552,6 +553,7 @@ table.tablesorter
   cursor: move
 
 .new_idea_submit, .flag_submit_button
+  width: 40px
   padding: 5px 10px 5px 10px
   background: #01bb00
   cursor: pointer
@@ -613,6 +615,7 @@ table.tablesorter
   border: 4px solid #3198c1              /* har, comment out other border code*/
 
 .bottom_status
+  height: 22px
   //margin-top: 490px
   border: 4px solid #3198c1              /* har, comment out other border code*/
   border-top: 0px
